# hi

./: .travis.yml  Makefile  README.md
3nplus1/: .gitignore  Makefile  README.md  TODO.md  analysis.jl  collatz.jl  maths.jl  plot.jl  sim.jl  tests.jl  tree.dot  tree.jl  viz.jl
ann/: Makefile  README.md  TODO.md  analysis.ipynb  ann.jl  cv.jl  data.jl  features.jl  images.jl  metrics.jl  models.jl  nn.jl  notebook.jl  optim.jl  scratch.ipynb  test.jl  utils.jl
bisschen/: README.md  bisschen.cabal
bisschen/src/: Lib.hs
bisschen/test/: Spec.hs
fftw/: Makefile  README.md  fftw.go  fftw_test.go
idiot-bayes/: .gitignore  IEEE754.md  Makefile  README.md  oracle
idiot-bayes/polyglot/: classifier.py  oracle.py
idiot-bayes/tests/: classifier_test.py  oracle_test.py
jpeg/: README.md  environment.yml
logreg/: README.md  data.py  logreg.py  test.ipynb  test_logreg.py  util.py
merge/: .gitignore  Pipfile  merge.py  test_merge.py
metrictree/: Makefile  README.md  metrics.go  metrics_test.go  tree.go  tree_test.go
nn/: nn.py  requirements.txt  test_nn.py
nnjl/: README.md  auto.jl  deep.jl  forward.jl
percolate/: .gitignore  Makefile  README.md  draw.go  main.go  material.go  percolate_test.go  search.go
spectrogram/: .gitignore  Makefile  README.md  draw.go  spectrogram.go  spectrogram_test.go  test_helper.go  window.go
words/: README.md  handlers.go  priority_queue.go  service.go  vector.go  vector_test.go  words.go  words_test.go
wordvectors/: wordvectors.go  wordvectors_test.go
